--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "lodash": "^4.15.0",
     "markdown-it": "^8.0.0",
     "normalize.css": "^4.2.0",
-    "rebirth-http": "^0.0.4-build-1",
-    "rebirth-permission": "^0.0.2-build-1",
-    "rebirth-storage": "^0.0.5-build-2",
+    "rebirth-http": "^0.0.5",
+    "rebirth-permission": "^0.0.3",
+    "rebirth-storage": "^0.0.6",
     "rxjs": "5.0.0-beta.12",
     "stubby": "^4.0.0",
     "systemjs": "0.19.38",
